--- a/src/App.css
+++ b/src/App.css
@@ -457,6 +457,19 @@ li {
     justify-content: flex-start !important;
   }
 
+  /* Fix: calendar-right-panel should never overflow mobile width */
+  .calendar-right-panel {
+    max-width: 100vw !important;
+    min-width: 0 !important;
+    width: 100vw !important;
+    box-sizing: border-box !important;
+    padding-left: 0.2em !important;
+    padding-right: 0.2em !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    overflow-x: auto !important;
+  }
+
   .user-tab-container {
     min-width: 0 !important;
     max-width: 100vw !important;
