--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,10 @@
     width: 100vw !important;
     max-width: 100vw !important;
     min-width: 0 !important;
-    margin: 0 !important;
-    padding: 0 !important;
+    margin-left: 2vw !important;
+    margin-right: 2vw !important;
+    padding-left: 2vw !important;
+    padding-right: 2vw !important;
     box-sizing: border-box !important;
     left: 0 !important;
     right: 0 !important;
@@ -438,8 +440,8 @@ li {
   height: auto !important;
   max-width: 400px !important;
   width: 100%;
-  margin: 0.5rem auto !important;
-  padding: 0.5rem !important;
+  margin: 2vw auto !important;
+  padding: 2vw !important;
   background: #23243a !important;
   border-radius: 12px !important;
   box-shadow: 0 2px 12px #a259ff22, 0 0 0 2px #a259ff44 !important;
